# ultraclaw

./: CODE_MANIFEST.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: ultra-claw.example.yaml
examples/: basic_usage.py  multimodal_example.py  workflow_example.py
src/ultra_claw/: __init__.py
src/ultra_claw/api/: __init__.py  main.py
src/ultra_claw/cli/: __init__.py  main.py
src/ultra_claw/core/: __init__.py  agent.py  memory.py  models.py  plugin.py  session.py  workflow.py
src/ultra_claw/integrations/: __init__.py  memu.py  openclaw.py
src/ultra_claw/services/llm/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
src/ultra_claw/services/tools/: __init__.py  base.py  manager.py
src/ultra_claw/utils/: __init__.py  config.py  logger.py  security.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_agent.py  test_memory.py  test_models.py
tests/unit/__pycache__/: test_models.cpython-312-pytest-9.0.2.pyc.995
