[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultra-claw"
version = "1.0.0"
description = "Next-generation intelligent agent framework with long-term memory and multimodal capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ultra-Claw Team", email = "team@ultra-claw.dev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "redis>=5.0.0",
    "cryptography>=41.0.0",
    "pyjwt>=2.8.0",
    "structlog>=23.2.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "pillow>=10.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
all = [
    "anthropic>=0.8.0",
    "google-generativeai>=0.3.0",
    "asyncpg>=0.29.0",
    "sqlite-vec>=0.1.0",
    "prometheus-client>=0.19.0",
]

[project.scripts]
ultra-claw = "ultra_claw.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=src/ultra_claw --cov-report=term-missing"
